# mle-trafic-cycliste

./: .gitignore  Dockerfile  MLProject  README.md  docker-compose.yml  environment.yaml  pyproject.toml  quicktrain.py  requirements.txt  requirements_conda.txt  streamlit_app.py  streamlit_app2.py
.dvc/: config
.github/workflows/: docker-and-pytest-ci.yml  docker-and-pytest-main.yml  docker-and-pytest.yml  train-mlflow.yml
data/processed/: .gitignore  compteur-classes-one-hot-encoded.csv.dvc  compteur_name_dataset.csv.dvc  dataset-encode-1.csv.dvc  lieu-compteur-classes-one-hot-encoded.csv.dvc  lieu-compteur-one-hot-encoded.csv.dvc
data/raw/: .gitignore  compteur-one-hot-encoded.csv.dvc  velo_2023.csv.dvc  velo_2024.csv.dvc
docker/prometheus/: prometheus.yml
mlruns/0/: meta.yaml
models/: .gitignore  hgb_regressor_0.5_500.pkl  hgb_regressor_0.5_500.pkl.dvc  one_hot_encoder.pkl  one_hot_encoder.pkl.dvc
notebooks/: 1.0_exploration_data_2.ipynb  1.5_dataviz_annees_anterieures.ipynb  2.0_preprocessing_compteurs.ipynb  2.0_preprocessing_lieux_compteurs.ipynb  2.2_convert_to_classification.ipynb  2.5_normalisation.ipynb
notebooks/MLflow/: MLflow_training.ipynb
notebooks/classification/: DecisionTreeClassifier.ipynb  HistGradientBoostingClassifier.ipynb  KNNClassifier.ipynb  LogisticRegressionClass.ipynb  RandomForestClassifier.ipynb  SVC.ipynb  (+3 more)
requirements/: lce_requirements.txt  prophet_requirements.txt  xgboost_requirements.txt
src/: service.py  streamlit_utils.py
streamlit_utils/: streamlit_utils.py
tests/: api_test.py  authentication_test.py
(+38 files in other folders)
