[project]
name = "mle-trafic-cycliste"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi>=0.115.12",
    "joblib>=1.5.1",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "passlib>=1.7.4",
    "prometheus-client>=0.22.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.0",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "dvc[s3]>=3.60.1",
    "matplotlib>=3.10.3",
    "mlflow>=3.1.0",
    "plotly>=6.1.2",
    "pytest>=8.4.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "seaborn>=0.13.2",
    "streamlit>=1.45.1",
]
